// Local DB (Drift / SQLite)
// UUID primary keys stored as TEXT
// Timestamps stored as DATETIME (Drift DateTimeColumn)
// Sync metadata stored as sync_status (default 'pending' in Drift)

Table technicians_cache {
  id text [pk]                 // UUID from server / domain
  name text [not null]         // display name

  created_at datetime [not null, default: `currentDateAndTime` | `DateTime.now()`]
  updated_at datetime [not null, default: `DateTime.now()`]

  sync_status text [not null, default: 'pending']
}

Table inspections {
  id text [pk]
  aircraft_id text [not null]

  opened_at datetime           // nullable

  created_at datetime [not null, default: `currentDateAndTime`]
  updated_at datetime [not null, default: `DateTime.now()`]

  is_completed boolean [not null, default: false]
  completed_at datetime        // nullable

  technician_id text           // nullable (no FK constraint in Drift table)

  sync_status text [not null, default: 'pending']
}

Table tasks {
  id text [pk]
  inspection_id text [not null] // FK -> inspections.id (ON DELETE CASCADE)

  title text [not null]

  is_completed boolean [not null, default: false]
  result text                   // nullable
  notes text                    // nullable

  created_at datetime [not null, default: `DateTime.now()`]
  updated_at datetime [not null, default: `DateTime.now()`]

  sync_status text [not null, default: 'pending']

  Indexes {
    (inspection_id) [name: "tasks_inspection_id"]
  }
}

Table attachments {
  id text [pk]                  // UUID (matches client attachment id)
  task_id text [not null, unique] // FK -> tasks.id (ON DELETE CASCADE), max 1 per task

  file_name text [not null]
  mime_type text [not null]
  size_bytes int [not null]

  sha256 text                   // nullable
  local_path text               // nullable
  remote_key text               // nullable (may be null until uploaded)

  sync_status text [not null, default: 'pending']

  created_at datetime [not null, default: `currentDateAndTime`]
  updated_at datetime [not null, default: `currentDateAndTime`]

  // (optional to note here) Drift enforces FK via .references(...) on task_id
}

Ref: tasks.inspection_id > inspections.id [delete: cascade]
Ref: attachments.task_id > tasks.id [delete: cascade]
